# Surface-Reconstruction-Toolbox

./: .gitignore.txt  CMakeLists.txt  README.md  SurfaceReconToolbox.sln  SurfaceReconToolbox.vcxproj  SurfaceReconToolbox.vcxproj.filters  astyle_options.txt
BPA/: BPA.vcxproj  BPA.vcxproj.filters
BPA/Debug/: vc141.idb
Debug/: BPA.ilk  QuickTerrain.ilk  RobustCrust.ilk  SCBMesher.ilk  Test.ilk
QuickTerrain/: QuickTerrain.vcxproj  QuickTerrain.vcxproj.filters
QuickTerrain/Debug/: vc141.idb
RobustCrust/: RobustCrust.vcxproj  RobustCrust.vcxproj.filters
RobustCrust/Debug/: vc141.idb
SCBMesher/: SCBMesher.vcxproj  SCBMesher.vcxproj.filters
SDS/: SDS3D.cpp  SDS3D.h  SDS3D_MAP.cpp  SDS3D_MAP.h
Test/: Test.vcxproj  Test.vcxproj.filters
VSProjects/: ballpivoting.vcxproj  quickterrain.vcxproj  regr_test.vcxproj  robustcrust.vcxproj  scbmesher.vcxproj
models/: Bunny.asc  bunny.cgo
sortlib/: HCPO2D.h  HCPO3D.h  glsort.h  sedgesort.h  sedgesort_index.h  sortlibsortn.h  sortn.h  sortutil.h
srtools/: BPAexe.cpp  QuickTerrain_exe.cpp  RCexe.cpp  SCBexe.cpp  TESTexe.cpp
structs/: Coord2D.h  Coord3D.h  Triangle.h
tetgen1.4.3/: tetcall-2.cxx  tetgen.h
timers/: foo.h  hr_time.h  hr_time_linux.h
triangulations/: Import_STL.h  MeshGrowing.cpp  MeshGrowing.h  PointEdgeMap.h  PowerCrust.h  PowerCrust.h~  PowerCrust.txt  QuickDel2D.cpp  QuickDel2D.h  RobustCrust.h  STL_Import.cpp  TrianglesFunctions.h  TripletsMap.h  predicates.h  tmap.h  triangle.c
util/: ArraysLib.h  ExceptionHandler.h  SmallPriorityQueue.h  Viewer.h  filemanager.h  shell_io.h
(+82 files in other folders)
